hero fix on mobiles

--- a/website/www/site/assets/scss/_hero-mobile.scss
+++ b/website/www/site/assets/scss/_hero-mobile.scss
@@ -21,7 +21,7 @@
   position: relative;
   margin-bottom: 0;
   display: none;
-
+  margin-top: 64px;
   .hero-content {
     position: absolute;
     z-index: 1;
